VotingApp/k8s-manifests/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voting
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: quay.io/achanoia/voting_app_result
        name: result
        ports:
        - containerPort: 8080
          name: result
