VotingApp/k8s-manifests/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: quay.io/achanoia/voting_app:latest 
        name: vote
        ports:
        - containerPort: 8080
          name: vote
