VotingApp/k8s-manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voting
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: quay.io/achanoia/voting_worker:latest 
        name: worker
