VotingApp/k8s-manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  namespace: voting
  name: redis
spec:
  type: ClusterIP
  ports:
  - name: "redis-service"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
