VotingApp/k8s-manifests/vote-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voting
  name: proxy
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  ports:
  - name: proxy
    port: 443
    targetPort: 8443
  selector:
    app: vote
