VotingApp/k8s-manifests/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voting
  labels:
    app: vote
  name: vote
spec:
  type: NodePort
  ports:
  - name: "vote-service"
    port: 5000
    targetPort: 8080
    nodePort: 31000
  selector:
    app: vote
