VotingApp/k8s-manifests/result-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: result
  namespace: voting
  labels:
    app: result
    app.kubernetes.io/instance: argocd-app-sample-apps
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: result-voting.apps.homelab.mondeo.com
  to:
    kind: Service
    name: result
    weight: 100
  port:
    targetPort: result-service
  wildcardPolicy: None
