VotingApp/k8s-manifests/vote-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vote
  namespace: voting
  labels:
    app: vote
    app.kubernetes.io/instance: argocd-app-sample-apps
spec:
  host: vote-voting.apps.sno.homelab.lab
  to:
    kind: Service
    name: vote
    weight: 100
  port:
    targetPort: vote-service
  wildcardPolicy: None
